--- a/FashionMnistCNN 2 .ipynb
+++ b/FashionMnistCNN 2 .ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM99vYTF+BdZbyBOjlqXfgc",
+      "authorship_tag": "ABX9TyNwdl0m3cx/V3g00BtnY4qq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "uf0D-Dk7G6WJ"
       },
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "8S_TgP63HnAi"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
         "id": "HAHKMDECHpfX",
         "outputId": "8e8c9506-2f27-4e93-c78d-ac7403c148ae"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,6 +87,7 @@
     {
       "cell_type": "code",
       "source": [
+        "classes = [\"T-shirt/top\", \"Trouser\", \"Pullover\", \"Dress\", \"Coat\", \"Sandal\", \"Shirt\", \"Sneaker\", \"Bag\", \"Ankle boot\"]\n",
         "n=200\n",
         "plt.imshow(x_train[n], cmap=\"gray\")\n",
         "plt.title(classes[y_train[n]])\n",
@@ -98,9 +99,9 @@
           "height": 452
         },
         "id": "7p1Sw0uLHpnC",
-        "outputId": "cadd6186-7006-4689-ff65-e4b9d9fc03be"
+        "outputId": "e49eba70-b1c7-45e8-8758-9073a8508d94"
       },
-      "execution_count": 26,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
@@ -123,7 +124,7 @@
       "metadata": {
         "id": "7rVtVYsdHpqb"
       },
-      "execution_count": 27,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -135,7 +136,7 @@
       "metadata": {
         "id": "S3gSK9A6HpuP"
       },
-      "execution_count": 28,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -156,55 +157,55 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y6-hEPFIHpxn",
-        "outputId": "153e80d2-b018-40b1-adce-2f185910338f"
+        "outputId": "74c7d15f-2ffb-441f-c7c8-6eecadd1f3ff"
       },
-      "execution_count": 29,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            "60/60 [==============================] - 1s 10ms/step - loss: 30.9102 - accuracy: 0.6185 - val_loss: 10.0930 - val_accuracy: 0.7458\n",
+            "60/60 [==============================] - 1s 10ms/step - loss: 22.8505 - accuracy: 0.6082 - val_loss: 8.9510 - val_accuracy: 0.7215\n",
             "Epoch 2/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 7.0737 - accuracy: 0.7780 - val_loss: 5.8767 - val_accuracy: 0.7859\n",
+            "60/60 [==============================] - 0s 7ms/step - loss: 6.4573 - accuracy: 0.7526 - val_loss: 5.5005 - val_accuracy: 0.7643\n",
             "Epoch 3/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 4.8921 - accuracy: 0.8020 - val_loss: 5.3342 - val_accuracy: 0.7823\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 4.2661 - accuracy: 0.7883 - val_loss: 4.1102 - val_accuracy: 0.7860\n",
             "Epoch 4/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 3.9912 - accuracy: 0.8160 - val_loss: 3.8045 - val_accuracy: 0.8124\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 3.2555 - accuracy: 0.8056 - val_loss: 3.5951 - val_accuracy: 0.7938\n",
             "Epoch 5/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 3.1339 - accuracy: 0.8270 - val_loss: 4.1444 - val_accuracy: 0.7950\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 2.5901 - accuracy: 0.8208 - val_loss: 3.0329 - val_accuracy: 0.7979\n",
             "Epoch 6/15\n",
-            "60/60 [==============================] - 0s 5ms/step - loss: 2.7432 - accuracy: 0.8322 - val_loss: 3.6511 - val_accuracy: 0.7906\n",
+            "60/60 [==============================] - 0s 7ms/step - loss: 2.2711 - accuracy: 0.8255 - val_loss: 2.6367 - val_accuracy: 0.8185\n",
             "Epoch 7/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 2.4530 - accuracy: 0.8352 - val_loss: 3.1185 - val_accuracy: 0.8149\n",
+            "60/60 [==============================] - 0s 8ms/step - loss: 1.8565 - accuracy: 0.8354 - val_loss: 2.1871 - val_accuracy: 0.8214\n",
             "Epoch 8/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 2.2728 - accuracy: 0.8376 - val_loss: 2.8407 - val_accuracy: 0.8164\n",
+            "60/60 [==============================] - 1s 9ms/step - loss: 1.6218 - accuracy: 0.8403 - val_loss: 2.0006 - val_accuracy: 0.8252\n",
             "Epoch 9/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 1.9421 - accuracy: 0.8433 - val_loss: 2.6328 - val_accuracy: 0.8139\n",
+            "60/60 [==============================] - 1s 8ms/step - loss: 1.4803 - accuracy: 0.8440 - val_loss: 1.9693 - val_accuracy: 0.8193\n",
             "Epoch 10/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 1.5976 - accuracy: 0.8554 - val_loss: 2.1912 - val_accuracy: 0.8202\n",
+            "60/60 [==============================] - 0s 8ms/step - loss: 1.2913 - accuracy: 0.8492 - val_loss: 1.7200 - val_accuracy: 0.8321\n",
             "Epoch 11/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 1.6599 - accuracy: 0.8447 - val_loss: 2.2776 - val_accuracy: 0.8192\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 1.1712 - accuracy: 0.8519 - val_loss: 1.7234 - val_accuracy: 0.8239\n",
             "Epoch 12/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 1.4785 - accuracy: 0.8548 - val_loss: 2.0651 - val_accuracy: 0.8238\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 1.0575 - accuracy: 0.8576 - val_loss: 1.5042 - val_accuracy: 0.8285\n",
             "Epoch 13/15\n",
-            "60/60 [==============================] - 0s 5ms/step - loss: 1.3442 - accuracy: 0.8556 - val_loss: 2.0716 - val_accuracy: 0.8310\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 0.9626 - accuracy: 0.8594 - val_loss: 1.4521 - val_accuracy: 0.8267\n",
             "Epoch 14/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 1.2567 - accuracy: 0.8576 - val_loss: 1.7771 - val_accuracy: 0.8347\n",
+            "60/60 [==============================] - 0s 5ms/step - loss: 0.8865 - accuracy: 0.8623 - val_loss: 1.3510 - val_accuracy: 0.8324\n",
             "Epoch 15/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 1.1277 - accuracy: 0.8606 - val_loss: 1.8104 - val_accuracy: 0.8300\n"
+            "60/60 [==============================] - 0s 5ms/step - loss: 0.8283 - accuracy: 0.8652 - val_loss: 1.2956 - val_accuracy: 0.8342\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7f45824c2d10>"
+              "<keras.src.callbacks.History at 0x7f458223ec20>"
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 33
         }
       ]
     }
