--- a/PollutionTestCNN 4 .ipynb
+++ b/PollutionTestCNN 4 .ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJBbxhIm733+NTFwSyyKga",
+      "authorship_tag": "ABX9TyNcfgW3G6qpN0utN+1dtCCk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -872,53 +872,52 @@
         "cp = ModelCheckpoint('model/', save_best_only=True)\n",
         "model.compile(loss=MeanSquaredError(), optimizer=Adam(learning_rate=0.0001),\n",
         "metrics=[RootMeanSquaredError()])\n",
-        "model.fit(X_train, y_train, validation_data = (X_val, y_val), epochs=10, verbose=1,\n",
-        "callbacks=[cp])"
+        "model.fit(X_train, y_train, validation_data = (X_val, y_val), epochs=10, verbose=1, callbacks=[cp])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "J_AzWzcRR3EJ",
-        "outputId": "7f1c3f3f-6bdd-40dc-d457-37aa2d72a0ae"
+        "outputId": "2a254c7c-bd7c-416d-eba7-ddab86253a7a"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "6/6 [==============================] - 2s 175ms/step - loss: 11480.3838 - root_mean_squared_error: 107.3751 - val_loss: 28928.1992 - val_root_mean_squared_error: 173.6182\n",
+            "6/6 [==============================] - 2s 190ms/step - loss: 11141.8838 - root_mean_squared_error: 105.9376 - val_loss: 27957.7051 - val_root_mean_squared_error: 170.6813\n",
             "Epoch 2/10\n",
-            "6/6 [==============================] - 1s 139ms/step - loss: 11377.5186 - root_mean_squared_error: 107.6038 - val_loss: 28636.3535 - val_root_mean_squared_error: 172.7402\n",
+            "6/6 [==============================] - 2s 317ms/step - loss: 11135.4307 - root_mean_squared_error: 105.9597 - val_loss: 27913.9492 - val_root_mean_squared_error: 170.5477\n",
             "Epoch 3/10\n",
-            "6/6 [==============================] - 1s 140ms/step - loss: 11296.9541 - root_mean_squared_error: 106.7976 - val_loss: 28396.1348 - val_root_mean_squared_error: 172.0142\n",
+            "6/6 [==============================] - 1s 138ms/step - loss: 11119.0361 - root_mean_squared_error: 105.3808 - val_loss: 27873.5996 - val_root_mean_squared_error: 170.4244\n",
             "Epoch 4/10\n",
-            "6/6 [==============================] - 1s 135ms/step - loss: 11245.6543 - root_mean_squared_error: 105.7141 - val_loss: 28245.4121 - val_root_mean_squared_error: 171.5571\n",
+            "6/6 [==============================] - 1s 138ms/step - loss: 11106.3018 - root_mean_squared_error: 107.0179 - val_loss: 27833.8535 - val_root_mean_squared_error: 170.3029\n",
             "Epoch 5/10\n",
-            "6/6 [==============================] - 1s 137ms/step - loss: 11211.1562 - root_mean_squared_error: 107.3202 - val_loss: 28177.9609 - val_root_mean_squared_error: 171.3522\n",
+            "6/6 [==============================] - 1s 139ms/step - loss: 11097.1416 - root_mean_squared_error: 104.4650 - val_loss: 27796.2207 - val_root_mean_squared_error: 170.1877\n",
             "Epoch 6/10\n",
-            "6/6 [==============================] - 1s 139ms/step - loss: 11201.7090 - root_mean_squared_error: 106.4972 - val_loss: 28136.1406 - val_root_mean_squared_error: 171.2251\n",
+            "6/6 [==============================] - 1s 133ms/step - loss: 11087.4980 - root_mean_squared_error: 106.3481 - val_loss: 27759.4121 - val_root_mean_squared_error: 170.0750\n",
             "Epoch 7/10\n",
-            "6/6 [==============================] - 1s 162ms/step - loss: 11185.2783 - root_mean_squared_error: 106.6516 - val_loss: 28099.7734 - val_root_mean_squared_error: 171.1144\n",
+            "6/6 [==============================] - 1s 160ms/step - loss: 11074.7725 - root_mean_squared_error: 106.7743 - val_loss: 27724.6562 - val_root_mean_squared_error: 169.9685\n",
             "Epoch 8/10\n",
-            "6/6 [==============================] - 1s 193ms/step - loss: 11173.5283 - root_mean_squared_error: 104.5177 - val_loss: 28068.2285 - val_root_mean_squared_error: 171.0183\n",
+            "6/6 [==============================] - 1s 193ms/step - loss: 11067.1797 - root_mean_squared_error: 106.6515 - val_loss: 27691.3379 - val_root_mean_squared_error: 169.8663\n",
             "Epoch 9/10\n",
-            "6/6 [==============================] - 1s 199ms/step - loss: 11164.2695 - root_mean_squared_error: 105.0786 - val_loss: 28037.0977 - val_root_mean_squared_error: 170.9234\n",
+            "6/6 [==============================] - 1s 212ms/step - loss: 11057.7197 - root_mean_squared_error: 103.9513 - val_loss: 27658.9180 - val_root_mean_squared_error: 169.7669\n",
             "Epoch 10/10\n",
-            "6/6 [==============================] - 1s 139ms/step - loss: 11157.4834 - root_mean_squared_error: 104.1285 - val_loss: 28007.3594 - val_root_mean_squared_error: 170.8328\n"
+            "6/6 [==============================] - 1s 139ms/step - loss: 11046.9307 - root_mean_squared_error: 106.0979 - val_loss: 27625.8613 - val_root_mean_squared_error: 169.6654\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7cb30c91b0a0>"
+              "<keras.src.callbacks.History at 0x7cb307c150c0>"
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 26
         }
       ]
     }
