--- a/HeartAttack 6 .ipynb
+++ b/HeartAttack 6 .ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNk+qFJ/zPwgzGaV28Dpnpk",
+      "authorship_tag": "ABX9TyPf0o38nyRUkkd3Eps5fk+H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 59,
       "metadata": {
         "id": "wnhS1Jr9rD4F"
       },
@@ -47,19 +47,6 @@
     {
       "cell_type": "code",
       "source": [
-        "column_names = [\n",
-        "  \"age\",\n",
-        "  \"sex\",\n",
-        "  \"painloc\",\n",
-        "  \"painexer\",\n",
-        "  \"relrest\",\n",
-        "  \"systolic resting-blood-pressure\",\n",
-        "  \"smoke\",\n",
-        "  \"famhist\",\n",
-        "  \"max-heart-rate-achieved\",\n",
-        "  \"heart-disease\"\n",
-        "]\n",
-        "\n",
         "dataset = pd.read_csv('/content/heart.csv')\n",
         "dataset.head()"
       ],
@@ -69,9 +56,9 @@
           "height": 226
         },
         "id": "pZtDrS2SlWrJ",
-        "outputId": "ce43efc8-b9bf-4587-9a67-2eae868b2aae"
+        "outputId": "9c2aeed0-b41f-49c6-9532-2f8cfb949dc6"
       },
-      "execution_count": 11,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +80,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b599b3a6-c710-4c6a-805d-6975b45f21eb\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d644b306-a3f4-47ec-988a-6b807c9d497f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -220,7 +207,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b599b3a6-c710-4c6a-805d-6975b45f21eb')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d644b306-a3f4-47ec-988a-6b807c9d497f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -272,12 +259,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b599b3a6-c710-4c6a-805d-6975b45f21eb button.colab-df-convert');\n",
+              "        document.querySelector('#df-d644b306-a3f4-47ec-988a-6b807c9d497f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b599b3a6-c710-4c6a-805d-6975b45f21eb');\n",
+              "        const element = document.querySelector('#df-d644b306-a3f4-47ec-988a-6b807c9d497f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -297,8 +284,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6c82df81-6831-4a9f-971a-33de6001c711\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6c82df81-6831-4a9f-971a-33de6001c711')\"\n",
+              "<div id=\"df-6302ca02-acaa-4d31-8fce-4cf2fa526a28\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6302ca02-acaa-4d31-8fce-4cf2fa526a28')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -417,7 +404,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6c82df81-6831-4a9f-971a-33de6001c711 button');\n",
+              "        document.querySelector('#df-6302ca02-acaa-4d31-8fce-4cf2fa526a28 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -434,7 +421,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 51
         }
       ]
     },
@@ -455,9 +442,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "faQkion-lW2G",
-        "outputId": "997c2fca-2134-4be2-f6ff-7bd86c4660be"
+        "outputId": "da7abc63-c183-421e-81e1-e9b02b913a2b"
       },
-      "execution_count": 12,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,9 +485,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "le1aonAkl7To",
-        "outputId": "34a1ff11-ed31-42bd-a157-7da9eea1035d"
+        "outputId": "7f641909-f330-4fc7-f077-b1798ebd04a9"
       },
-      "execution_count": 13,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,9 +541,9 @@
           "height": 489
         },
         "id": "gvqdemlWRRN3",
-        "outputId": "007fc8c1-5e82-4e7c-f128-dd341f392f34"
+        "outputId": "78ca6a30-b542-4158-c892-30d4ca8a2cc0"
       },
-      "execution_count": 14,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +553,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 54
         },
         {
           "output_type": "display_data",
@@ -591,9 +578,9 @@
           "height": 452
         },
         "id": "cPwR-EcwY-Qf",
-        "outputId": "02374c32-4e9f-42b5-d9ac-ac8547b43ae5"
+        "outputId": "f70d4ee4-0cd1-4bbe-b125-962dcc62ccf6"
       },
-      "execution_count": 15,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
@@ -620,7 +607,7 @@
       "metadata": {
         "id": "EpRaGJCKY-I2"
       },
-      "execution_count": 28,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -641,7 +628,7 @@
       "metadata": {
         "id": "Zo7pInSnY-UF"
       },
-      "execution_count": 29,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -657,25 +644,25 @@
         "print(\"Precision score =\",DT_precision_score)\n",
         "print(\"Recall score =\", DT_recall_score)\n",
         "print(\"F1 score =\", DTScore)\n",
-        "print(\"Accuracy score of Decision Tree Algorithm =\",DT_Score)"
+        "print(\"Accuracy score of Decision Tree Algorithm =\", DT_Score)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8_4kgzd2acmv",
-        "outputId": "b50f4ebc-bff3-4783-eb74-e92b71de6bf7"
+        "outputId": "f3b45113-6932-4b5c-d236-d55225fc5030"
       },
-      "execution_count": 27,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Precision score = 0.8536585365853658\n",
-            "Recall score = 0.7446808510638298\n",
-            "F1 score = 0.7631578947368421\n",
-            "Accuracy score of Decision Tree Algorithm = 0.7954545454545454\n"
+            "Precision score = 0.6875\n",
+            "Recall score = 0.8461538461538461\n",
+            "F1 score = 0.7236842105263158\n",
+            "Accuracy score of Decision Tree Algorithm = 0.7586206896551724\n"
           ]
         }
       ]
