--- a/FashionMnistCNN 2 .ipynb
+++ b/FashionMnistCNN 2 .ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNwdl0m3cx/V3g00BtnY4qq",
+      "authorship_tag": "ABX9TyNgjN2LG/K54CvuvbR5xCEi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "uf0D-Dk7G6WJ"
       },
@@ -40,8 +40,7 @@
         "import matplotlib.pyplot as plt\n",
         "from tensorflow.keras.datasets import fashion_mnist\n",
         "from tensorflow.keras.utils import to_categorical\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Input, Dense, Conv2D, Flatten, MaxPool2D, Activation"
+        "from tensorflow.keras.models import Sequential"
       ]
     },
     {
@@ -52,7 +51,7 @@
       "metadata": {
         "id": "8S_TgP63HnAi"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -68,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HAHKMDECHpfX",
-        "outputId": "8e8c9506-2f27-4e93-c78d-ac7403c148ae"
+        "outputId": "71edfe4b-6b10-4758-9aed-e3b7daa17bd7"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,9 +98,9 @@
           "height": 452
         },
         "id": "7p1Sw0uLHpnC",
-        "outputId": "e49eba70-b1c7-45e8-8758-9073a8508d94"
+        "outputId": "02204e8a-b10d-46ef-b069-f0af73476de3"
       },
-      "execution_count": 30,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -124,7 +123,7 @@
       "metadata": {
         "id": "7rVtVYsdHpqb"
       },
-      "execution_count": 31,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -136,7 +135,7 @@
       "metadata": {
         "id": "S3gSK9A6HpuP"
       },
-      "execution_count": 32,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -157,55 +156,55 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y6-hEPFIHpxn",
-        "outputId": "74c7d15f-2ffb-441f-c7c8-6eecadd1f3ff"
+        "outputId": "d89edd38-1768-4595-ecf6-f95aae511048"
       },
-      "execution_count": 33,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            "60/60 [==============================] - 1s 10ms/step - loss: 22.8505 - accuracy: 0.6082 - val_loss: 8.9510 - val_accuracy: 0.7215\n",
+            "60/60 [==============================] - 1s 9ms/step - loss: 17.2482 - accuracy: 0.6591 - val_loss: 6.8457 - val_accuracy: 0.7563\n",
             "Epoch 2/15\n",
-            "60/60 [==============================] - 0s 7ms/step - loss: 6.4573 - accuracy: 0.7526 - val_loss: 5.5005 - val_accuracy: 0.7643\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 5.1638 - accuracy: 0.7817 - val_loss: 4.7998 - val_accuracy: 0.7773\n",
             "Epoch 3/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 4.2661 - accuracy: 0.7883 - val_loss: 4.1102 - val_accuracy: 0.7860\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 3.6423 - accuracy: 0.8023 - val_loss: 3.5676 - val_accuracy: 0.7982\n",
             "Epoch 4/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 3.2555 - accuracy: 0.8056 - val_loss: 3.5951 - val_accuracy: 0.7938\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 2.7379 - accuracy: 0.8189 - val_loss: 2.8525 - val_accuracy: 0.8080\n",
             "Epoch 5/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 2.5901 - accuracy: 0.8208 - val_loss: 3.0329 - val_accuracy: 0.7979\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 2.2212 - accuracy: 0.8275 - val_loss: 2.4500 - val_accuracy: 0.8136\n",
             "Epoch 6/15\n",
-            "60/60 [==============================] - 0s 7ms/step - loss: 2.2711 - accuracy: 0.8255 - val_loss: 2.6367 - val_accuracy: 0.8185\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 1.8497 - accuracy: 0.8359 - val_loss: 2.2225 - val_accuracy: 0.8159\n",
             "Epoch 7/15\n",
-            "60/60 [==============================] - 0s 8ms/step - loss: 1.8565 - accuracy: 0.8354 - val_loss: 2.1871 - val_accuracy: 0.8214\n",
+            "60/60 [==============================] - 0s 8ms/step - loss: 1.6127 - accuracy: 0.8397 - val_loss: 1.9959 - val_accuracy: 0.8173\n",
             "Epoch 8/15\n",
-            "60/60 [==============================] - 1s 9ms/step - loss: 1.6218 - accuracy: 0.8403 - val_loss: 2.0006 - val_accuracy: 0.8252\n",
+            "60/60 [==============================] - 0s 7ms/step - loss: 1.4345 - accuracy: 0.8439 - val_loss: 1.9178 - val_accuracy: 0.8228\n",
             "Epoch 9/15\n",
-            "60/60 [==============================] - 1s 8ms/step - loss: 1.4803 - accuracy: 0.8440 - val_loss: 1.9693 - val_accuracy: 0.8193\n",
+            "60/60 [==============================] - 0s 8ms/step - loss: 1.3293 - accuracy: 0.8447 - val_loss: 1.7032 - val_accuracy: 0.8241\n",
             "Epoch 10/15\n",
-            "60/60 [==============================] - 0s 8ms/step - loss: 1.2913 - accuracy: 0.8492 - val_loss: 1.7200 - val_accuracy: 0.8321\n",
+            "60/60 [==============================] - 1s 9ms/step - loss: 1.1262 - accuracy: 0.8539 - val_loss: 1.5549 - val_accuracy: 0.8287\n",
             "Epoch 11/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 1.1712 - accuracy: 0.8519 - val_loss: 1.7234 - val_accuracy: 0.8239\n",
+            "60/60 [==============================] - 0s 7ms/step - loss: 1.0188 - accuracy: 0.8555 - val_loss: 1.4434 - val_accuracy: 0.8315\n",
             "Epoch 12/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 1.0575 - accuracy: 0.8576 - val_loss: 1.5042 - val_accuracy: 0.8285\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 0.9342 - accuracy: 0.8590 - val_loss: 1.3596 - val_accuracy: 0.8335\n",
             "Epoch 13/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 0.9626 - accuracy: 0.8594 - val_loss: 1.4521 - val_accuracy: 0.8267\n",
+            "60/60 [==============================] - 0s 6ms/step - loss: 0.8402 - accuracy: 0.8621 - val_loss: 1.2559 - val_accuracy: 0.8327\n",
             "Epoch 14/15\n",
-            "60/60 [==============================] - 0s 5ms/step - loss: 0.8865 - accuracy: 0.8623 - val_loss: 1.3510 - val_accuracy: 0.8324\n",
+            "60/60 [==============================] - 0s 5ms/step - loss: 0.7603 - accuracy: 0.8650 - val_loss: 1.1765 - val_accuracy: 0.8367\n",
             "Epoch 15/15\n",
-            "60/60 [==============================] - 0s 5ms/step - loss: 0.8283 - accuracy: 0.8652 - val_loss: 1.2956 - val_accuracy: 0.8342\n"
+            "60/60 [==============================] - 0s 5ms/step - loss: 0.7086 - accuracy: 0.8655 - val_loss: 1.1864 - val_accuracy: 0.8280\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7f458223ec20>"
+              "<keras.src.callbacks.History at 0x7f170b3176d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 20
         }
       ]
     }
