--- a/FashionMnistCNN 2 .ipynb
+++ b/FashionMnistCNN 2 .ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyNgjN2LG/K54CvuvbR5xCEi",
+      "authorship_tag": "ABX9TyMZSMgd0zrN6T5De4od49fZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -30,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 10,
       "metadata": {
         "id": "uf0D-Dk7G6WJ"
       },
@@ -40,7 +38,8 @@
         "import matplotlib.pyplot as plt\n",
         "from tensorflow.keras.datasets import fashion_mnist\n",
         "from tensorflow.keras.utils import to_categorical\n",
-        "from tensorflow.keras.models import Sequential"
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Conv2D, Activation, Flatten, Dense"
       ]
     },
     {
@@ -49,10 +48,29 @@
         "(x_train, y_train), (x_test, y_test) = fashion_mnist.load_data()"
       ],
       "metadata": {
-        "id": "8S_TgP63HnAi"
+        "id": "8S_TgP63HnAi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34a3c2e2-faba-48bb-fa3f-f287aec69606"
       },
-      "execution_count": 15,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "29515/29515 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "26421880/26421880 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "5148/5148 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "4422102/4422102 [==============================] - 0s 0us/step\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -67,9 +85,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HAHKMDECHpfX",
-        "outputId": "71edfe4b-6b10-4758-9aed-e3b7daa17bd7"
+        "outputId": "161791ed-b857-4c70-8eb2-7a451e33ea9e"
       },
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,9 +116,9 @@
           "height": 452
         },
         "id": "7p1Sw0uLHpnC",
-        "outputId": "02204e8a-b10d-46ef-b069-f0af73476de3"
+        "outputId": "c8c8fcd5-b748-4a40-9c69-e77bc02cf654"
       },
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -123,7 +141,7 @@
       "metadata": {
         "id": "7rVtVYsdHpqb"
       },
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -135,7 +153,7 @@
       "metadata": {
         "id": "S3gSK9A6HpuP"
       },
-      "execution_count": 19,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -156,55 +174,55 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y6-hEPFIHpxn",
-        "outputId": "d89edd38-1768-4595-ecf6-f95aae511048"
+        "outputId": "4898e6bc-93c8-4574-db54-8796e25bb8ca"
       },
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            "60/60 [==============================] - 1s 9ms/step - loss: 17.2482 - accuracy: 0.6591 - val_loss: 6.8457 - val_accuracy: 0.7563\n",
+            "60/60 [==============================] - 7s 109ms/step - loss: 6.7424 - accuracy: 0.6768 - val_loss: 2.6452 - val_accuracy: 0.7737\n",
             "Epoch 2/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 5.1638 - accuracy: 0.7817 - val_loss: 4.7998 - val_accuracy: 0.7773\n",
+            "60/60 [==============================] - 7s 124ms/step - loss: 1.9056 - accuracy: 0.7909 - val_loss: 1.7461 - val_accuracy: 0.7814\n",
             "Epoch 3/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 3.6423 - accuracy: 0.8023 - val_loss: 3.5676 - val_accuracy: 0.7982\n",
+            "60/60 [==============================] - 6s 107ms/step - loss: 1.2982 - accuracy: 0.8088 - val_loss: 1.3800 - val_accuracy: 0.7925\n",
             "Epoch 4/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 2.7379 - accuracy: 0.8189 - val_loss: 2.8525 - val_accuracy: 0.8080\n",
+            "60/60 [==============================] - 7s 124ms/step - loss: 0.9900 - accuracy: 0.8192 - val_loss: 1.1729 - val_accuracy: 0.8034\n",
             "Epoch 5/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 2.2212 - accuracy: 0.8275 - val_loss: 2.4500 - val_accuracy: 0.8136\n",
+            "60/60 [==============================] - 6s 103ms/step - loss: 0.8034 - accuracy: 0.8303 - val_loss: 1.0393 - val_accuracy: 0.8046\n",
             "Epoch 6/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 1.8497 - accuracy: 0.8359 - val_loss: 2.2225 - val_accuracy: 0.8159\n",
+            "60/60 [==============================] - 7s 124ms/step - loss: 0.6756 - accuracy: 0.8402 - val_loss: 0.9545 - val_accuracy: 0.8085\n",
             "Epoch 7/15\n",
-            "60/60 [==============================] - 0s 8ms/step - loss: 1.6127 - accuracy: 0.8397 - val_loss: 1.9959 - val_accuracy: 0.8173\n",
+            "60/60 [==============================] - 6s 104ms/step - loss: 0.5875 - accuracy: 0.8488 - val_loss: 0.8619 - val_accuracy: 0.8161\n",
             "Epoch 8/15\n",
-            "60/60 [==============================] - 0s 7ms/step - loss: 1.4345 - accuracy: 0.8439 - val_loss: 1.9178 - val_accuracy: 0.8228\n",
+            "60/60 [==============================] - 7s 123ms/step - loss: 0.5241 - accuracy: 0.8576 - val_loss: 0.8125 - val_accuracy: 0.8240\n",
             "Epoch 9/15\n",
-            "60/60 [==============================] - 0s 8ms/step - loss: 1.3293 - accuracy: 0.8447 - val_loss: 1.7032 - val_accuracy: 0.8241\n",
+            "60/60 [==============================] - 7s 123ms/step - loss: 0.4724 - accuracy: 0.8631 - val_loss: 0.7655 - val_accuracy: 0.8261\n",
             "Epoch 10/15\n",
-            "60/60 [==============================] - 1s 9ms/step - loss: 1.1262 - accuracy: 0.8539 - val_loss: 1.5549 - val_accuracy: 0.8287\n",
+            "60/60 [==============================] - 6s 106ms/step - loss: 0.4330 - accuracy: 0.8681 - val_loss: 0.7354 - val_accuracy: 0.8268\n",
             "Epoch 11/15\n",
-            "60/60 [==============================] - 0s 7ms/step - loss: 1.0188 - accuracy: 0.8555 - val_loss: 1.4434 - val_accuracy: 0.8315\n",
+            "60/60 [==============================] - 8s 140ms/step - loss: 0.4056 - accuracy: 0.8731 - val_loss: 0.7084 - val_accuracy: 0.8306\n",
             "Epoch 12/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 0.9342 - accuracy: 0.8590 - val_loss: 1.3596 - val_accuracy: 0.8335\n",
+            "60/60 [==============================] - 7s 121ms/step - loss: 0.3783 - accuracy: 0.8791 - val_loss: 0.6859 - val_accuracy: 0.8344\n",
             "Epoch 13/15\n",
-            "60/60 [==============================] - 0s 6ms/step - loss: 0.8402 - accuracy: 0.8621 - val_loss: 1.2559 - val_accuracy: 0.8327\n",
+            "60/60 [==============================] - 7s 120ms/step - loss: 0.3576 - accuracy: 0.8826 - val_loss: 0.6704 - val_accuracy: 0.8336\n",
             "Epoch 14/15\n",
-            "60/60 [==============================] - 0s 5ms/step - loss: 0.7603 - accuracy: 0.8650 - val_loss: 1.1765 - val_accuracy: 0.8367\n",
+            "60/60 [==============================] - 6s 104ms/step - loss: 0.3418 - accuracy: 0.8852 - val_loss: 0.6610 - val_accuracy: 0.8368\n",
             "Epoch 15/15\n",
-            "60/60 [==============================] - 0s 5ms/step - loss: 0.7086 - accuracy: 0.8655 - val_loss: 1.1864 - val_accuracy: 0.8280\n"
+            "60/60 [==============================] - 7s 120ms/step - loss: 0.3280 - accuracy: 0.8886 - val_loss: 0.6419 - val_accuracy: 0.8370\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7f170b3176d0>"
+              "<keras.src.callbacks.History at 0x789bbf314af0>"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 11
         }
       ]
     }
